@@ -446,11 +446,9 @@ char *kremuser;
 krb5_principal client;
 krb5_authenticator *kdata;
 
-#ifdef KRB5_KRB4_COMPAT
 #include <kerberosIV/krb.h>
 AUTH_DAT	*v4_kdata;
 KTEXT		v4_ticket;
-#endif
 
 int auth_sys = 0;	/* Which version of Kerberos used to authenticate */
 
